// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarNavigation compact mode > (Snapshot) renders in compact mode 1`] = `
<DocumentFragment>
  <div
    class="group/sidebar flex flex-1 flex-col items-start justify-start"
    data-compact="true"
    data-testid="sidebar-navigation"
  >
    <div
      class="mb-4 flex w-full flex-col text-sm group-data-[compact]/sidebar:mb-2 group-data-[compact]/sidebar:items-center"
    >
      <div
        class="relative inline-flex"
      >
        <button
          class="cursor-pointer rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground border-2 h-9 px-3 inline-flex flex-row items-center justify-between border-transparent bg-transparent group-data-[compact]/sidebar:size-8 group-data-[compact]/sidebar:justify-center group-data-[compact]/sidebar:p-0"
          data-headlessui-state=""
          type="button"
        >
          <span
            class="inline-flex flex-row items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-compass"
              data-testid="section-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16.24 7.76-1.804 5.411a2 2 0 0 1-1.265 1.265L7.76 16.24l1.804-5.411a2 2 0 0 1 1.265-1.265z"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="group-data-[compact]/sidebar:hidden"
            >
              Explore
            </span>
          </span>
          <div
            animate="[object Object]"
            class="group-data-[compact]/sidebar:hidden"
            transition="[object Object]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SidebarNavigation normal mode > (Snapshot) renders in normal mode 1`] = `
<DocumentFragment>
  <div
    class="group/sidebar flex flex-1 flex-col items-start justify-start"
    data-testid="sidebar-navigation"
  >
    <div
      class="mb-4 flex w-full flex-col text-sm group-data-[compact]/sidebar:mb-2 group-data-[compact]/sidebar:items-center"
    >
      <button
        class="cursor-pointer rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground border-2 h-9 px-3 inline-flex flex-row items-center justify-between border-transparent bg-transparent group-data-[compact]/sidebar:size-8 group-data-[compact]/sidebar:justify-center group-data-[compact]/sidebar:p-0"
        data-headlessui-state=""
        type="button"
      >
        <span
          class="inline-flex flex-row items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-compass"
            data-testid="section-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16.24 7.76-1.804 5.411a2 2 0 0 1-1.265 1.265L7.76 16.24l1.804-5.411a2 2 0 0 1 1.265-1.265z"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="group-data-[compact]/sidebar:hidden"
          >
            Explore
          </span>
        </span>
        <div
          animate="[object Object]"
          class="group-data-[compact]/sidebar:hidden"
          transition="[object Object]"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
